@@ -566,9 +566,18 @@
     <!-- the view that display staticInfos about item in the PrettyLink column -->
     <browser:page
         for="Products.PloneMeeting.interfaces.IMeetingItem"
-        name="item-static-infos"
+        name="static-infos"
         class=".views.ItemStaticInfosView"
         template="templates/itemstaticinfos.pt"
+        layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
+        permission="zope2.View" />
+
+    <!-- the view that display staticInfos about meeting in the PrettyLink column -->
+    <browser:page
+        for="Products.PloneMeeting.interfaces.IMeeting"
+        name="static-infos"
+        class=".views.MeetingStaticInfosView"
+        template="templates/meetingstaticinfos.pt"
         layer="Products.PloneMeeting.interfaces.IPloneMeetingLayer"
         permission="zope2.View" />
 
