@@ -1,4 +1,4 @@
-<tal:labels condition="python: 'labels' in view.visibleColumns">
+<tal:labels condition="python: 'static_labels' in view.visibleColumns">
   <div id="labeling-viewlet" tal:define="active_labels view/active_labels" tal:condition="active_labels">
     <ul class="activeLabels">
       <li tal:repeat="label view/active_labels">
@@ -9,14 +9,14 @@
   </div>
 </tal:labels>
 
-<tal:reference condition="python: 'item_reference' in view.visibleColumns">
+<tal:reference condition="python: 'static_item_reference' in view.visibleColumns">
     <p class="discreet"
        tal:define="itemReference context/getItemReference"
        tal:condition="itemReference"
        tal:content="itemReference" />
 </tal:reference>
 
-<tal:budget condition="python: 'budget_infos' in view.visibleColumns and context.getBudgetRelated() and not context.fieldIsEmpty('budgetInfos')">
+<tal:budget condition="python: 'static_budget_infos' in view.visibleColumns and context.getBudgetRelated() and not context.fieldIsEmpty('budgetInfos')">
   <span tal:define="field python: context.getField('budgetInfos');
                     mode string:view;">
     <span metal:use-macro="context/widgets/field/macros/view" />
